# sharp-on-fhir-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/omnimem/: Dockerfile  config_shim.py  server_entry.py
scripts/: start.sh
src/sharp_fhir_mcp/: __init__.py  context.py  fhir_utils.py  server.py
src/sharp_fhir_mcp/clients/: __init__.py  fhir_client.py  mem0_client.py  omnimem_client.py  simplemem_client.py
src/sharp_fhir_mcp/models/: __init__.py  types.py
src/sharp_fhir_mcp/tools/: __init__.py  _helpers.py  clinical.py  clinical_context.py  fhir.py  lab_imaging.py  memory.py  visualization.py
src/sharp_fhir_mcp/ui/: __init__.py  clinical_charts.py  clinical_display.py
